# jarvis-asist

./: .env.example  .gitignore  .pre-commit-config.yaml  CLAUDE.md  Makefile  PROGRESS.md  README.md  docker-compose.prod.yml  docker-compose.yml  pyproject.toml
docker/: Caddyfile  Dockerfile
docs/: ARCHITECTURE.md  PRODUCT_SPEC.md
docs/decisions/: llm-provider.md  oauth-mode.md  phase-1-plan.md
docs/runbooks/: bot-registration.md  deploy-hetzner.md
scripts/: register_webhook.sh
src/jarvis/: __init__.py
src/jarvis/api/: health.py  main.py  webhooks.py
src/jarvis/core/: exceptions.py  idempotency.py  logging.py  security.py  settings.py
src/jarvis/integrations/: telegram.py
src/jarvis/tools/: __init__.py  commands.py
src/jarvis/workers/: celery_app.py  tasks.py
tests/: conftest.py
tests/unit/: test_commands.py  test_idempotency.py  test_security.py  test_settings.py  test_webhook.py
