[project]
name = "jarvis"
version = "0.0.1"
description = "Personal AI assistant — Telegram-first, single-agent, plugin tools"
readme = "README.md"
requires-python = ">=3.12"
license = { text = "Proprietary" }
authors = [{ name = "David" }]

dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "aiogram>=3.13",
    "celery[redis]>=5.4",
    "redis>=5.2",
    "sqlalchemy[asyncio]>=2.0.36",
    "asyncpg>=0.30",
    "alembic>=1.14",
    "pydantic>=2.10",
    "pydantic-settings>=2.6",
    "structlog>=24.4",
    "httpx>=0.28",
    "tenacity>=9.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.25",
    "pytest-cov>=6.0",
    "hypothesis>=6.122",
    "respx>=0.22",
    "fakeredis>=2.26",
    "ruff>=0.8",
    "mypy>=1.13",
    "pre-commit>=4.0",
    "types-redis",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/jarvis"]

[tool.ruff]
line-length = 100
target-version = "py312"
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E", "W",   # pycodestyle
    "F",        # pyflakes
    "I",        # isort
    "B",        # bugbear
    "UP",       # pyupgrade
    "SIM",      # simplify
    "RUF",      # ruff-specific
    "ASYNC",    # async-correctness
    "S",        # bandit (security)
    "TID",      # tidy-imports
]
ignore = [
    "S101",  # assert in tests
    "E501",  # line length handled by formatter
]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["S105", "S106"]  # hardcoded test secrets are fine

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.mypy]
python_version = "3.12"
strict = true
warn_unused_configs = true
warn_redundant_casts = true
warn_unused_ignores = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
no_implicit_optional = true
plugins = ["pydantic.mypy"]

[[tool.mypy.overrides]]
module = ["celery.*", "aiogram.*"]
ignore_missing_imports = true

# Celery decorators are untyped; scope the relaxation to modules that wear them.
[[tool.mypy.overrides]]
module = ["jarvis.workers.*"]
disallow_untyped_decorators = false

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = "test_*.py"
addopts = "-ra --strict-markers --strict-config"
markers = [
    "integration: tests requiring external services",
]

[tool.coverage.run]
source = ["src/jarvis"]
branch = true

[tool.coverage.report]
exclude_lines = ["pragma: no cover", "raise NotImplementedError", "if TYPE_CHECKING:"]
